Миграция для артистов

--- a/Stupify/Views/Music/Index.cshtml
+++ b/Stupify/Views/Music/Index.cshtml
@@ -11,7 +11,7 @@
     @foreach (Song song in ViewBag.Songs)
     {
         <tr>
-            <td>@song.Artist</td>
+            <td>@song.Artist.Name</td>
             <td>@song.Name</td>
             <td>
                 <audio controls="" name="media">
