Пара багов со ссылками

--- a/Stupify/Views/Artist/Details.cshtml
+++ b/Stupify/Views/Artist/Details.cshtml
@@ -9,7 +9,7 @@
     {
         <tr>
             <td>
-                <a href="Artist/Details/@song.ArtistId">@song.Artist.Name</a>
+                <a href="/Artist/@song.ArtistId">@song.Artist.Name</a>
             </td>
             <td>@song.Name</td>
             <td>
