--- a/Stupify/Views/Artist/Index.cshtml
+++ b/Stupify/Views/Artist/Index.cshtml
@@ -5,6 +5,6 @@
 @foreach (Artist artist in ViewBag.Artists)
 {
     <div>
-        <a href="Artist/@artist.Id">@artist.Name</a>
+        <a href="/Artist/@artist.Id">@artist.Name</a>
     </div>
 }
