--- a/Stupify/Views/Music/Index.cshtml
+++ b/Stupify/Views/Music/Index.cshtml
@@ -15,7 +15,45 @@
                     <source src="@song.Address" type="audio/mpeg">
                 </audio>
             </td>
+            <td>
+                @if (ViewBag.LikedSongs != null &&
+                    ViewBag.LikedSongs.Contains(song.Id))
+                {
+                    <img id="like_@song.Id" src="/pics/heart2.png" height="20" onclick="likeSong(@song.Id)" />
+                }
+                else
+                {
+                    <img id="like_@song.Id" src="/pics/heart.png" height="20" onclick="likeSong(@song.Id)" />
+                }
+            </td>
         </tr>
     }
-
 </table>
+
+<script>
+    function likeSong(id) {
+        var request = new XMLHttpRequest();
+        var isLike = (document.getElementById("like_" + id).src.includes("/pics/heart.png"));
+
+        if (isLike) {
+            request.open("post", "/UserLike/Like/" + id, true);
+            request.onload = function () {
+                if (request.status != 200) {
+                    alert("Войди в систему, блин");
+                } else {
+                    document.getElementById("like_" + id).src = "/pics/heart2.png";
+                }
+            }.bind(this);
+        } else {
+            request.open("post", "/UserLike/DisLike/" + id, true);
+            request.onload = function () {
+                if (request.status != 200) {
+                    alert("Войди в систему, блин");
+                } else {
+                    document.getElementById("like_" + id).src = "/pics/heart.png";
+                }
+            }.bind(this);
+        }
+        request.send();
+    }
+</script>
